# POK

exam/mux_74hc151n/: .cproject  .mxproject  .project  CMakeLists.txt  mux_74hc151n.ioc
exam/mux_74hc151n/Src/: main.c
lab_1_cmake/: .gitignore  cmake_clean.sh  cmake_test.sh  make_clean.sh  make_test.sh
lab_1_cmake/examples/: CMakeLists.txt  Makefile  test.sh  test_2.sh
lab_2_strings/: .gitignore  CMakeLists.txt
lab_2_strings/C_String/: application.sh
lab_2_strings/include/: library.h  my_str.h
lab_2_strings/src/: library.c  my_str.c
lab_2_strings/test/: tests.c
lab_3_asm/: Makefile
lab_3_asm/demos/: hello_world.asm  hello_world_extd.asm  libc_usage.asm  libc_usage_basic.asm  sort_arr_sint32.c
lab_3_asm/examples/: encodings_64.asm  encodings_64.lst  hello_linux64  hello_linux64.asm  hello_linux64_libc.asm  important_constants.cpp  inline_asm.c  intrinsic_1.c  print.c  print.s  t
lab_3_asm/examples/c_to_asm/: Makefile  sample.c  strlen.asm
lab_3_asm/hack_the_exe_task2/: new_prg_31.x  prg_31.x
lab_3_asm/lib/: print_arr_sint32.asm  sort_arr_sint32.asm
lab_3_asm/scripts/: run_all.sh  run_sort.sh  start_c_sort.sh  test_sort_array.sh
lab_4_logic/: alu_scheme.bdf  alu_scheme.qpf  alu_scheme.qsf  alu_scheme.qws
lab_4_logic/db/: alu_scheme.(0).cnf.cdb  alu_scheme.(0).cnf.hdb  alu_scheme.cbx.xml  alu_scheme.cmp.rdb  alu_scheme.db_info  alu_scheme.hier_info  alu_scheme.hif  alu_scheme.map.qmsg  alu_scheme.map.rdb  alu_scheme.map_bb.hdb  alu_scheme.pre_map.hdb  alu_scheme.rtlv.hdb  alu_scheme.rtlv_sg.cdb  prev_cmp_alu_scheme.qmsg
lab_4_logic/output_files/: alu_scheme.flow.rpt  alu_scheme.map.rpt  alu_scheme.map.summary
lab_5_2_counter/: lab_5_2_counter.ioc
lab_5_2_counter/Src/: main.c
lab_5_blinc/: lab_5_blinc.ioc
lab_7_i2c/: .cproject  .mxproject  .project  CMakeLists.txt  lab_7_i2c.ioc
lab_7_i2c/Inc/: accelero.h  main.h  stm32f3_discovery.h  stm32f3_discovery_gyroscope.h  stm32f3xx_hal_conf.h
lab_7_i2c/Src/: gpio.c  l3gd20.c  lsm303dlhc.c  main.c  spi.c  stm32f3_discovery.c  stm32f3_discovery_accelerometer.c  stm32f3_discovery_gyroscope.c  usart.c
midle/: CMakeLists.txt  arr_diff.c  arr_diff.h  main.c  run_main.sh
mux_74/: .cproject  .mxproject  .project  mux_74.ioc
mux_74/Src/: gpio.c  main.c
servo/: .cproject  .mxproject  CMakeLists.txt  STM32F3DISCOVERY.xml  servo.ioc
servo/Debug/: output.map  servo.elf  servo.hex
servo/Src/: main.c  tim.c
small_bldc/: .cproject  .mxproject  .project  small_bldc.ioc
small_bldc/Debug/: makefile  objects.list  output.map  small_bldc.elf  small_bldc.hex
small_bldc/Inc/: main.h
small_bldc/Src/: gpio.c  main.c  tim.c
sonar/: .cproject  .mxproject
sonar/Inc/: main.h  stm32f3xx_it.h
sonar/Src/: gpio.c  main.c  tim.c  usart.c
(+45 files in other folders)
